# auv

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  agent.md  build.rs  cspell.config.yaml  flake.nix  qodana.yaml
.cursor/: hooks.json  package-lock.json  package.json
bundles/: native-app-skill-tree.v0.json
crates/auv-netease-music/: Cargo.toml
crates/auv-netease-music/src/: app.rs  cli.rs  interaction.rs  lib.rs  output.rs  player.rs  recording.rs  screen.rs  sidebar.rs  view_memory.rs
crates/auv-netease-music/src/commands/: daily_recommended.rs  mod.rs  playlist.rs
crates/auv-netease-music/src/scroll/policies/: detection_motion.rs  mod.rs
crates/auv-netease-music/src/view_parsers/sidebar/: ax.rs  ax_tests.rs  live.rs  mod.rs  parse.rs  parse_tests.rs  reacquire.rs  reconstruct.rs  region.rs  region_tests.rs  scan.rs  test_support.rs  tests.rs
crates/auv-netease-music/src/views/: mod.rs  player.rs  query_match.rs  sidebar.rs
docs/: TERMS_AND_CONCEPTS.md
examples/: mc17_quality_baseline_report.rs  mc19_query_wired_live_action.rs  netease_play_visible_anchor.rs  netease_playlist_ls.rs
src/: app.rs  ax_recognition.rs  bundle.rs  candidate_action_command.rs  candidate_action_decision.rs  candidate_promotion.rs  candidate_promotion_recording.rs  catalog.rs  cli.rs  contract.rs  driver.rs  inference_recognition.rs  inspect.rs  inspect_scene_state.rs  inspect_server.rs  inspect_server_viewer.html  lib.rs  main.rs  mcp.rs  minecraft.rs  minecraft_query_live_action.rs  minecraft_verification.rs  model.rs  osu.rs  recorded_operation.rs  recording.rs  (+12 more)
(+562 files in other folders)
