[package]
name = "auv-netease-music"
version.workspace = true
edition.workspace = true
publish.workspace = true
readme.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
auv-driver = { path = "../auv-driver" }
auv-view = { path = "../auv-view" }
clap = { version = "4.5", features = ["derive"] }
serde.workspace = true
serde_json.workspace = true
image.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
auv-driver-macos = { path = "../auv-driver-macos" }
auv-media-macos = { path = "../auv-media-macos" }
